@@ -1235,6 +1235,9 @@ coreMain(int argc, char *argv[]) {
 		preinitialize, 2);
 	setAgentsOptionsDefaults();
 	sanityCheckOptions();
+
+	restoreOomScore(agentsOptions);
+
 	ret = runCore();
 	shutdownAgent(agentsOptions);
 	return ret;
