@@ -1647,4 +1647,32 @@ shutdownAgent(VariantMap *agentOptions) {
 	oxt::shutdown();
 }
 
+void
+restoreOomScore(VariantMap *agentOptions) {
+	TRACE_POINT();
+
+	string score = agentOptions->get("original_oom_score", false);
+	if (score.empty()) {
+		return;
+	}
+
+	FILE *f;
+	bool legacy = false;
+
+	if (score.at(0) == 'l') {
+		legacy = true;
+		score = score.substr(1);
+		f = fopen("/proc/self/oom_adj", "w");
+	} else {
+		f = fopen("/proc/self/oom_score_adj", "w");
+	}
+
+	if (f != NULL) {
+		fprintf(f, "%s\n", score.c_str());
+		fclose(f);
+	} else {
+		P_WARN("Unable to set OOM score to " << score << " (legacy: " << legacy << ") due to error: " << strerror(errno) << " (process will remain at inherited OOM score)");
+	}
+}
+
 } // namespace Passenger
